--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,11 @@
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 websockets>=12.0
+mangum>=0.17.0
 pydantic>=2.5.0
 python-dotenv>=1.0.0
+requests>=2.31.0
+markdownify>=0.11.6
+openai>=1.3.0
+boto3>=1.29.0
 
