chore: add .cursor and node_modules to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,13 @@ backend/venv/
 .DS_Store
 .idea/
 .vscode/
+.cursor/
+
+# Node modules
+node_modules/
+frontend/node_modules/
 
 # Frontend
-frontend/node_modules/
 frontend/dist/
 frontend/build/
 frontend/.vite/
