docs: clarify environment variable configuration for AWS deployment
- Add comprehensive ENVIRONMENT_VARIABLES.md guide explaining how to set environment variables during AWS deployment
- Update Sysadminguide.md with 'Where Do I Set Environment Variables?' section at the beginning of deployment chapter
- Add summary table mapping SAM parameters to Lambda environment variables
- Add comments in template.yaml showing parameter-to-environment-variable mapping
- Update README.md to reference new environment variables guide

Resolves confusion about where to set environment variables when deploying to AWS. Makes it explicit that parameters are set via sam deploy commands, not as direct environment variables.

--- a/infrastructure/template.yaml
+++ b/infrastructure/template.yaml
@@ -8,6 +8,10 @@ Globals:
     MemorySize: 2048
     Runtime: python3.11
 
+# These Parameters are set during deployment and automatically become Lambda environment variables
+# Set them via: sam deploy --guided (interactive)
+# Or via: sam deploy --parameter-overrides LLMProvider=bedrock AWSRegionBedrock=us-west-2 ...
+# Or via: samconfig.toml configuration file
 Parameters:
   LLMProvider:
     Type: String
@@ -62,16 +66,17 @@ Resources:
     Properties:
       CodeUri: ../backend
       Handler: lambda_handler.handler
+      # Parameters (set during deployment) are mapped to Lambda environment variables here
       Environment:
         Variables:
-          LLM_PROVIDER: !Ref LLMProvider
-          OPENAI_API_KEY: !Ref OpenAIApiKey
-          OPENAI_MODEL: !Ref OpenAIModel
-          AWS_REGION: !Ref AWSRegionBedrock
-          BEDROCK_MODEL: !Ref BedrockModel
-          ATLASSIAN_URL: !Ref AtlassianURL
-          ATLASSIAN_USER_EMAIL: !Ref AtlassianEmail
-          ATLASSIAN_API_TOKEN: !Ref AtlassianToken
+          LLM_PROVIDER: !Ref LLMProvider              # From Parameter: LLMProvider
+          OPENAI_API_KEY: !Ref OpenAIApiKey           # From Parameter: OpenAIApiKey
+          OPENAI_MODEL: !Ref OpenAIModel              # From Parameter: OpenAIModel
+          AWS_REGION: !Ref AWSRegionBedrock           # From Parameter: AWSRegionBedrock
+          BEDROCK_MODEL: !Ref BedrockModel            # From Parameter: BedrockModel
+          ATLASSIAN_URL: !Ref AtlassianURL            # From Parameter: AtlassianURL
+          ATLASSIAN_USER_EMAIL: !Ref AtlassianEmail   # From Parameter: AtlassianEmail
+          ATLASSIAN_API_TOKEN: !Ref AtlassianToken    # From Parameter: AtlassianToken
       Events:
         ApiEvent:
           Type: HttpApi
