--- a/infrastructure/template.yaml
+++ b/infrastructure/template.yaml
@@ -10,7 +10,7 @@ Globals:
 
 # These Parameters are set during deployment and automatically become Lambda environment variables
 # Set them via: sam deploy --guided (interactive)
-# Or via: sam deploy --parameter-overrides LLMProvider=bedrock AWSRegionBedrock=us-west-2 ...
+# Or via: sam deploy --parameter-overrides LLMProvider=bedrock BedrockRegion=us-west-2 ...
 # Or via: samconfig.toml configuration file
 Parameters:
   LLMProvider:
@@ -29,9 +29,10 @@ Parameters:
     Type: String
     Default: gpt-4
   
-  AWSRegionBedrock:
+  BedrockRegion:
     Type: String
     Default: us-west-2
+    Description: AWS region for Bedrock (optional - defaults to Lambda's region if not specified)
   
   BedrockModel:
     Type: String
@@ -72,7 +73,7 @@ Resources:
           LLM_PROVIDER: !Ref LLMProvider              # From Parameter: LLMProvider
           OPENAI_API_KEY: !Ref OpenAIApiKey           # From Parameter: OpenAIApiKey
           OPENAI_MODEL: !Ref OpenAIModel              # From Parameter: OpenAIModel
-          AWS_REGION: !Ref AWSRegionBedrock           # From Parameter: AWSRegionBedrock
+          BEDROCK_REGION: !Ref BedrockRegion          # From Parameter: BedrockRegion (optional - falls back to Lambda's AWS_REGION)
           BEDROCK_MODEL: !Ref BedrockModel            # From Parameter: BedrockModel
           ATLASSIAN_URL: !Ref AtlassianURL            # From Parameter: AtlassianURL
           ATLASSIAN_USER_EMAIL: !Ref AtlassianEmail   # From Parameter: AtlassianEmail
