feat: replace WAF with Lambda authorizer for IP-based access control
HTTP API Gateway does not support AWS WAF association, causing all WAF
setup attempts to fail. Replaced with a Lambda authorizer solution that:

- Works natively with HTTP APIs
- Costs significantly less (~$0.02/month vs $6-10/month for WAF)
- Is configured via AllowedIPRanges parameter during deployment
- Caches authorization for 5 minutes to minimize Lambda invocations
- Provides detailed logging of allowed/blocked requests

Changes:
- Added backend/authorizer.py - Lambda authorizer function with IP checking
- Added AllowedIPRanges parameter to template.yaml
- Configured HTTP API with Lambda authorizer
- Added AuthorizerInvokePermission for API Gateway to invoke authorizer
- Created cleanup-waf.sh to remove orphaned WAF resources
- Updated NETWORK_SECURITY.md with Lambda authorizer approach
- Removed WAF setup scripts references from docs

Deployment:
  sam deploy --parameter-overrides AllowedIPRanges="62.216.248.197/32"

Cleanup orphaned WAF resources:
  ./infrastructure/cleanup-waf.sh

--- a/infrastructure/template.yaml
+++ b/infrastructure/template.yaml
@@ -13,6 +13,11 @@ Globals:
 # Or via: sam deploy --parameter-overrides LLMProvider=bedrock BedrockRegion=us-west-2 ...
 # Or via: samconfig.toml configuration file
 Parameters:
+  AllowedIPRanges:
+    Type: String
+    Description: "Comma-separated list of IP ranges allowed to access the API (CIDR notation, e.g., 203.0.113.0/24,198.51.100.0/24). Use 0.0.0.0/0 to allow all."
+    Default: "0.0.0.0/0"
+  
   LLMProvider:
     Type: String
     Default: openai
@@ -49,9 +54,31 @@ Parameters:
     NoEcho: true
 
 Resources:
+  # Lambda Authorizer for IP-based access control
+  IPAuthorizerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ../backend
+      Handler: authorizer.handler
+      Runtime: python3.11
+      Timeout: 10
+      Environment:
+        Variables:
+          ALLOWED_IP_RANGES: !Ref AllowedIPRanges
+
   EstimationApi:
     Type: AWS::Serverless::HttpApi
     Properties:
+      Auth:
+        Authorizers:
+          IPAuthorizer:
+            AuthorizerType: REQUEST
+            AuthorizerPayloadFormatVersion: "2.0"
+            EnableSimpleResponses: true
+            FunctionArn: !GetAtt IPAuthorizerFunction.Arn
+            Identity:
+              ReauthorizeEvery: 300
+        DefaultAuthorizer: IPAuthorizer
       CorsConfiguration:
         AllowOrigins:
           - "*"
@@ -61,6 +88,15 @@ Resources:
           - OPTIONS
         AllowHeaders:
           - "*"
+  
+  # Grant API Gateway permission to invoke authorizer
+  AuthorizerInvokePermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !Ref IPAuthorizerFunction
+      Action: lambda:InvokeFunction
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${EstimationApi}/*"
 
   EstimationFunction:
     Type: AWS::Serverless::Function
